// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all methods 1`] = `
Object {
  "_isJSONSchemaObject": true,
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "patternProperties": Object {
    "^[a-zA-Z0-9]*$": Object {
      "_isJSONSchemaObject": true,
      "properties": Object {
        "made": Object {
          "_isJSONSchemaObject": true,
          "name": "made",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 1,
        },
        "model": Object {
          "_isJSONSchemaObject": true,
          "name": "model",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 2,
        },
        "year": Object {
          "_isJSONSchemaObject": true,
          "name": "year",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 0,
        },
      },
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "name": "array",
      "title": "string",
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "string": Object {
      "_isJSONSchemaObject": true,
      "description": null,
      "name": "string",
      "title": "string",
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
      "x-reactions": Array [
        Object {
          "fullfill": Object {
            "schema": Object {},
          },
          "target": "xxx",
          "when": true,
        },
      ],
    },
  },
  "type": "object",
  "version": "2.0",
  "x-reactions": null,
}
`;

exports[`all methods 2`] = `
Object {
  "_isJSONSchemaObject": true,
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "patternProperties": Object {
    "^[a-zA-Z0-9]*$": Object {
      "_isJSONSchemaObject": true,
      "properties": Object {
        "made": Object {
          "_isJSONSchemaObject": true,
          "name": "made",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 1,
        },
        "model": Object {
          "_isJSONSchemaObject": true,
          "name": "model",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 2,
        },
        "year": Object {
          "_isJSONSchemaObject": true,
          "name": "year",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
          "x-index": 0,
        },
      },
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "name": "array",
      "title": "string",
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "string": Object {
      "_isJSONSchemaObject": true,
      "description": null,
      "name": "string",
      "title": "string",
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
      "x-reactions": Array [
        Object {
          "fullfill": Object {
            "schema": Object {},
          },
          "target": "xxx",
          "when": true,
        },
      ],
    },
  },
  "type": "object",
  "version": "2.0",
  "x-reactions": null,
}
`;

exports[`all methods 3`] = `
Object {
  "_isJSONSchemaObject": true,
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "patternProperties": Object {},
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "type": "integer",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      ],
      "name": "array",
      "title": "string",
      "type": "string",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "type": "object",
  "version": "2.0",
  "x-reactions": null,
}
`;

exports[`all methods 4`] = `
Object {
  "_isJSONSchemaObject": true,
  "description": null,
  "name": "string",
  "title": "string",
  "type": "string",
  "version": "2.0",
  "x-decorator": "FormItem",
  "x-reactions": Array [
    Object {
      "fullfill": Object {
        "schema": Object {},
      },
      "target": "xxx",
      "when": true,
    },
  ],
}
`;

exports[`all methods 5`] = `
Object {
  "_isJSONSchemaObject": true,
  "additionalItems": undefined,
  "additionalProperties": undefined,
  "items": Array [
    undefined,
  ],
  "properties": Object {
    "xxx": undefined,
  },
  "type": "object",
  "version": "2.0",
}
`;

exports[`all methods 6`] = `
Object {
  "_isJSONSchemaObject": true,
  "additionalItems": undefined,
  "additionalProperties": undefined,
  "items": Array [
    undefined,
  ],
  "properties": Object {
    "xxx": undefined,
  },
  "type": "object",
  "version": "2.0",
}
`;

exports[`all props 1`] = `
Object {
  "_isJSONSchemaObject": true,
  "additionalProperties": Object {
    "_isJSONSchemaObject": true,
    "type": "string",
    "version": "2.0",
    "x-decorator": "FormItem",
  },
  "description": "description",
  "patternProperties": Object {
    "^[a-zA-Z0-9]*$": Object {
      "_isJSONSchemaObject": true,
      "properties": Object {
        "made": Object {
          "_isJSONSchemaObject": true,
          "name": "made",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        "model": Object {
          "_isJSONSchemaObject": true,
          "name": "model",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        "year": Object {
          "_isJSONSchemaObject": true,
          "name": "year",
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
      },
      "version": "2.0",
      "x-decorator": "FormItem",
    },
  },
  "properties": Object {
    "array": Object {
      "_isJSONSchemaObject": true,
      "additionalItems": Object {
        "_isJSONSchemaObject": true,
        "type": "number",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "items": Object {
        "_isJSONSchemaObject": true,
        "type": "string",
        "version": "2.0",
        "x-decorator": "FormItem",
      },
      "name": "array",
      "type": "array",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "array2": Object {
      "_isJSONSchemaObject": true,
      "items": Array [
        Object {
          "_isJSONSchemaObject": true,
          "type": "string",
          "version": "2.0",
          "x-decorator": "FormItem",
        },
        Object {
          "_isJSONSchemaObject": true,
          "type": "object",
          "version": "2.0",
        },
      ],
      "name": "array2",
      "type": "array",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "boolean": Object {
      "_isJSONSchemaObject": true,
      "default": false,
      "name": "boolean",
      "type": "boolean",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "date": Object {
      "_isJSONSchemaObject": true,
      "default": "2020-12-23",
      "name": "date",
      "type": "date",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "datetime": Object {
      "_isJSONSchemaObject": true,
      "default": "2020-12-23 23:00:00",
      "name": "datetime",
      "type": "datetime",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "number": Object {
      "_isJSONSchemaObject": true,
      "default": 100,
      "name": "number",
      "type": "number",
      "version": "2.0",
      "x-decorator": "FormItem",
    },
    "string": Object {
      "_isJSONSchemaObject": true,
      "default": "default",
      "name": "string",
      "required": true,
      "type": "string",
      "version": "2.0",
      "x-component": "Input",
      "x-component-props": Object {
        "placeholder": "placeholder",
      },
      "x-decorator": "FormItem",
      "x-decorator-props": Object {
        "labelCol": 3,
      },
      "x-disabled": true,
      "x-display": "visible",
      "x-editable": false,
      "x-hidden": false,
      "x-pattern": "readPretty",
      "x-reactions": Array [
        Object {
          "target": "xxx",
          "when": "{{aa > bb}}",
        },
      ],
      "x-read-only": true,
      "x-validator": Array [
        "phone",
      ],
    },
    "void": Object {
      "_isJSONSchemaObject": true,
      "name": "void",
      "type": "void",
      "version": "2.0",
    },
  },
  "title": "title",
  "type": "object",
  "version": "2.0",
}
`;
